--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cross-env": "^5.2.0",
     "jQuery": "^1.7.4",
     "jquery": "^3.3.1",
-    "laravel-mix": "^2.1.11"
+    "laravel-mix": "^2.1.11",
+    "popper.js": "^1.14.4"
   },
   "scripts": {
     "dev": "npm run development",
