--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "webpack.mix.js",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.3.1"
+    "@fortawesome/fontawesome-free": "^5.3.1",
+    "javascript": "^1.0.0"
   },
   "devDependencies": {
     "bootstrap": "^4.1.3",
